Use Arrays.asList() instead of List.of() in PLANNING_TABLE